# grim

./: .gitattributes  .gitignore  Cargo.toml  README.md  VP_VULKANINFO_AMD_Radeon_610M_(RADV_RAPHAEL_MENDOCINO)_26_1_4.json  all_pretty_edits.txt  all_pretty_edits_curr.txt  cvkg-components-overview.md  extract_chunks.py  finalride.md  fix.md  grim-architecture.md  grim-badass.md  grim-gguf.md  grim-implementation-plan.md  grim_p0_p3_impl_plans.md  grim_party_plan.md  grim_qkv_attention_kernel_spec.md  grim_rocm_perf_and_abi_fix_spec.md  grim_v2_gap_plan.md  mutants.toml  not-metal-enough.md  pass4.md  pretty_chunks.txt  reconstruct_both.py  reconstruct_lib.py  regerts.md  scratch_chunks.json  scratch_edits_curr.json  scratch_edits_prev.json  usability_test_scenario.md  use_test_end.md  use_test_end2.md  use_test_end3.md
.a0proj/: project.json
crates/grim-autograd/: Cargo.toml
crates/grim-autograd/src/: adamw.rs  backward.rs  injection.rs  lib.rs  loss.rs  ops.rs  param.rs  preference_loss.rs  registry.rs  tape.rs
crates/grim-backend-cpu/: Cargo.toml
crates/grim-backend-cpu/src/: dequant_gemm.rs  deterministic_rng.rs  device.rs  lib.rs  simd_gemm.rs  storage.rs  strict_kernels.rs
crates/grim-backend-cuda/: Cargo.toml  build.rs
crates/grim-backend-cuda/src/: kernels.rs  lib.rs
crates/grim-backend-metal/: Cargo.toml  build.rs
crates/grim-backend-metal/src/: kernels.msl  lib.rs
crates/grim-backend-metal/src/mods/: ane.rs  bridge.rs  mod.rs  npu.rs
crates/grim-backend-rocm/: Cargo.toml  build.rs  build_rocm_detect.rs
crates/grim-backend-rocm/examples/: tune_gemm.rs
crates/grim-backend-rocm/src/: autotune.rs  fusion.rs  gptq_kernel.rs  graph_capture.rs  lib.rs  lib_internal_tests.rs  p2p_route.rs  peer_access.rs  perf_gate.rs  quantization.rs  rccl.rs  rocm_detect.rs  rocm_pad.rs  speculative.rs
crates/grim-backend-rocm/src/device/: accel_features.rs  accel_ffi.rs  cubecl.rs  gemm_tuning.rs  handles.rs  helpers.rs  layout.rs  mod.rs  probe.rs  roc_device.rs  rocblas.rs  util.rs
crates/grim-backend-rocm/src/kernels/: compute_kernels.rs  decode_gemm.rs  fused_dequant_gemm.rs  jit_cache.rs  kv_dequant_attention.rs  mod.rs  qkv_attention.rs  source_asm.rs  wmma_gemm.rs
crates/grim-backend-rocm/src/memory/: allocator.rs  mod.rs  pinned.rs  pool.rs  storage.rs
crates/grim-backend-rocm/tests/: autotune.rs  caching_allocator_reuse.rs  decode_gemm.rs  device_cubecl.rs  fusion_smoke.rs  gemm_algo.rs  graph_capture.rs  hybrid_attention.rs  kv_dequant_attention_gpu.rs  kv_dequant_perf.rs  p2p_route.rs  paged_attention.rs  peer_access.rs  perf_gate.rs  qkv_attention.rs  qkv_head_dim_128.rs  quantization.rs  rccl.rs  rocm_detect.rs  scratch_pool.rs  select_gemm_algo_dispatch.rs  speculative.rs  tree_attention.rs  tree_attention_device.rs  wmma_gemm.rs
crates/grim-backend-vulkan/: Cargo.toml  build.rs
crates/grim-backend-vulkan/src/: cube_kernels.rs  lib.rs
crates/grim-cli/: Cargo.toml
crates/grim-cli/src/: accept.rs  bench.rs  catalog.rs  client.rs  compat.rs  cp.rs  doctor.rs  main.rs  oxidizer.rs  plugin.rs  rm.rs  run.rs  server.rs  service.rs  show.rs  spec.rs  start.rs  stop.rs  train.rs  verify.rs
crates/grim-core/: Cargo.toml
crates/grim-core/src/: architecture.rs  catalog.rs  client.rs  config.rs  error.rs  hyperparams.rs  kv_cache.rs  lib.rs  model.rs  paths.rs  sampler.rs  session.rs
crates/grim-disagg/: Cargo.toml
crates/grim-disagg/src/: lib.rs
crates/grim-engine/: Cargo.toml
crates/grim-engine/src/: lib.rs  model_loader.rs  streaming_forward.rs
crates/grim-engine/tests/: lfm2_350m_safetensors_inference.rs  sleipnir_rocm_inference.rs
crates/grim-format/: Cargo.toml
crates/grim-format/src/: bolt_on.rs  convert.rs  format.rs  format_v2.rs  gguf.rs  gptq.rs  lib.rs  onnx.rs  safetensors.rs  spec.rs  tokenizer.rs  tprov.rs  train.rs
crates/grim-format/tests/: integration.rs
crates/grim-garage/: Cargo.toml
crates/grim-garage/src/: discovery.rs  jobs.rs  lib.rs  main.rs  rocm.rs  routes.rs  theme.rs
crates/grim-garage/src/renderer_host/: mod.rs
crates/grim-garage/src/ui/: dashboard.rs  mod.rs  panels.rs  view_kind.rs
crates/grim-garage/src/ui_state/: display.rs  http_client.rs  mod.rs  poller.rs
crates/grim-garage/src/view_model/: hyperparam.rs  job_card.rs  layout.rs  mod.rs  rocm_panel.rs  training_panel.rs
crates/grim-garage/tests/: integration.rs  poller.rs  renderer_host.rs  ui_compositors.rs  view_model.rs
crates/grim-kvquant/: Cargo.toml
crates/grim-kvquant/src/: lib.rs
crates/grim-kvtransport/: Cargo.toml
crates/grim-kvtransport/src/: lib.rs
crates/grim-memory/: Cargo.toml
crates/grim-memory/src/: lib.rs
crates/grim-models/audio/: Cargo.toml
crates/grim-models/diffusion/: Cargo.toml
crates/grim-models/mamba/: Cargo.toml
crates/grim-models/transformer/: Cargo.toml
crates/grim-models/vision/: Cargo.toml
crates/grim-nn/: Cargo.toml
crates/grim-nn/src/: lib.rs  modules.rs  varbuilder.rs
crates/grim-nn/tests/: training_materialization.rs
crates/grim-plugin/: Cargo.toml
crates/grim-plugin/src/: arch_compat.rs  dylib_loader.rs  lib.rs  wasm_loader.rs
crates/grim-quant/: Cargo.toml
crates/grim-quant/proptest-regressions/: lib.txt
crates/grim-quant/src/: lib.rs
crates/grim-quant/tests/: quant_backward_audit.rs
crates/grim-scheduler/: Cargo.toml
crates/grim-scheduler/src/: lib.rs  self_tuning.rs
crates/grim-server/: Cargo.toml
crates/grim-server/src/: lib.rs
crates/grim-speculative/: Cargo.toml  NOTES.md
crates/grim-speculative/src/: confidence_head.rs  confidence_scheduler.rs  config.rs  distill.rs  draft_backbone.rs  entropy_confidence_head.rs  lib.rs  llama_mtp_adapter.rs  mamba_speculative.rs  markov_head.rs  native_mtp.rs  scheduler.rs  speculative_wrapper.rs  test_rng.rs  tiny_draft_backbone.rs  uniform_markov_head.rs
crates/grim-tensor/: Cargo.toml
crates/grim-tensor-graph/: Cargo.toml
crates/grim-tensor-graph/src/: ir.rs  lib.rs
crates/grim-tensor/src/: backend.rs  dtype.rs  error.rs  lib.rs  provider.rs  shape.rs  softmax_merge.rs  tensor.rs  wavefront.rs
(+53 files in other folders)
