[package]
name = "grim-autograd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Scoped autograd for adapter-only backward pass (LoRA / QLoRA) — minimal reverse-mode tape over the trainable path only."

[dependencies]
grim-tensor = { workspace = true }
grim-format = { workspace = true }
grim-backend-cpu = { workspace = true }
grim-backend-rocm = { workspace = true }
grim-backend-cuda = { workspace = true }
grim-backend-metal = { workspace = true }
serde = { version = "1", features = ["derive"] }

[features]
default = ["cuda-mem", "rocm-mem", "metal-mem"]
cuda-mem = []
rocm-mem = []
metal-mem = []
