[package]
name = "grim-backend-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CUDA (cudarc) compatibility backend for Grim."

[dependencies]
grim-tensor = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
