[package]
name = "grim-backend-metal"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Metal compatibility backend for Grim."

[dependencies]
grim-tensor = { workspace = true }
grim-backend-cpu = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = "0.5.2"
objc2-metal = "0.2.2"

[dev-dependencies]
tempfile = "3"

[features]
default = []
