[package]
name = "grim-backend-rocm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ROCm (hip/rocBLAS) backend for Grim — primary GPU target per architecture §4."

[dependencies]
grim-tensor = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
