[package]
name = "grim-backend-rocm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ROCm (hip/rocBLAS) backend for Grim — primary GPU target per architecture §4."

[dependencies]
grim-tensor = { workspace = true }
grim-format = { workspace = true }
thiserror = { workspace = true }
half = "2.0"
seahash = "4.1"
lazy_static = "1.4"
temp-env = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
# rocm-rs = { git = "https://github.com/RustNSparks/rocm-rs", rev = "master" }

[features]
default = []
rocm-profile = []
rocm-aiter = []
# hip-graph-capture feature temporarily disabled
rocm-kernel-macros = []