[package]
name = "grim-backend-vulkan"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Vulkan compatibility backend for Grim."

[dependencies]
grim-tensor = { workspace = true }
thiserror = { workspace = true }
lazy_static = "1.4"

[features]
default = []
