[package]
name = "grim-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Grim CLI — run, bench, quantize, plugin management."

[dependencies]
grim-tensor = { workspace = true }
grim-tensor-graph = { workspace = true }
grim-core = { workspace = true }
grim-engine = { workspace = true }
grim-server = { workspace = true }
grim-memory = { workspace = true }
grim-scheduler = { workspace = true }
grim-models-transformer = { workspace = true }
grim-models-mamba       = { workspace = true }
grim-models-vision      = { workspace = true }
grim-backend-cpu = { workspace = true }
grim-backend-rocm = { workspace = true }
grim-backend-cuda = { workspace = true }
grim-backend-vulkan = { workspace = true }
grim-backend-metal = { workspace = true }
grim-speculative = { workspace = true }
grim-plugin = { workspace = true }
grim-format = { workspace = true }
grim-quant = { workspace = true }
grim-nn = { workspace = true }
grim-autograd = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
windows-service = "0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rcgen = "0.12"
reqwest = { version = "0.11", features = ["json", "stream"] }
sha2 = "0.10"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"


[dev-dependencies]
tempfile = "3"

[features]
default = ["rocm"]
rocm = ["grim-backend-rocm/cubecl"]
wasm-sandbox = ["grim-plugin/wasm-sandbox"]
