[package]
name = "grim-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Grim core: Model trait family, Session, KV cache, sampler, error types — pure abstractions over grim-tensor and grim-nn."

[dependencies]
grim-tensor = { workspace = true }
grim-nn = { workspace = true }
thiserror = { workspace = true }
