[package]
name = "grim-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Grim inference engine runtime. Wires the scheduler, memory manager, model registry, and executor into a single `Engine` struct."

[dependencies]
grim-tensor = { workspace = true }
grim-core = { workspace = true }
grim-nn = { workspace = true }
grim-backend-cpu = { workspace = true }
grim-backend-rocm = { workspace = true }
grim-backend-cuda = { workspace = true }
grim-backend-metal = { workspace = true }
grim-memory = { workspace = true }
grim-scheduler = { workspace = true }
grim-models-transformer = { workspace = true }
grim-models-mamba = { workspace = true }
grim-models-vision = { workspace = true }
grim-format = { workspace = true }
grim-speculative = { workspace = true }
grim-kvquant = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []