[package]
name = "grim-format"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GGUF-compatible reader/writer and safetensors bridge for Grim. Implements TensorProvider so WeightSource can load real checkpoints."

[dependencies]
grim-tensor = { workspace = true }
grim-quant = { workspace = true }
thiserror = { workspace = true }
serde_json = "1"
half = "2.0"
zstd = { version = "0.13", default-features = false }

[features]
default = []

[dev-dependencies]
tempfile = "3"