[package]
name = "grim-garage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Grim's Garage — local-first training dashboard with native CVKG UI (Rust)."

[[bin]]
name = "grim-garage"
path = "src/main.rs"

[dependencies]
grim-format = { workspace = true }
grim-tensor = { workspace = true }
grim-tensor-graph = { workspace = true }
grim-backend-rocm = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

# Backend HTTP layer (axum).
# Pin to 0.8 because cvkg-cli 0.3.1 uses 0.8 in its ws_server router.
axum = { version = "0.8" }
futures = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

# CVKG 0.3.1 — native Rust UI framework (no React/Vite).
# cvkg-cli provides NativeShell for windowing; cvkg-components supplies
# 180+ primitive widgets (Button, Picker, Toggle, LineChart, ...);
# cvkg-themes provides OKLCH design tokens.
# CVKG 0.3.3 host scaffolding.
# - cvkg-webkit-server 0.3.3: exposes the dev-server axum Router
#   (`cvkg_webkit_server::router::create_router`) with VDOM snapshot,
#   build trigger, HMR WS, liveness/readiness probes, and `/metrics`.
# - cvkg (umbrella) 0.3.3 with default (headless) feature: provides
#   `CvkgHeadless` for renderer integration without a GPU/display.
# - cvkg-components / cvkg-themes / cvkg-core / cvkg-runic-text: native
#   UI primitives and OKLCH design tokens (no React/Vite/Tailwind).
cvkg-webkit-server = "0.3.3"
cvkg = { version = "0.3.3", features = [] }
cvkg-components = "0.3.3"
cvkg-themes = "0.3.3"
cvkg-core = "0.3.3"
cvkg-runic-text = "0.3.3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs"] }

[features]
default = []
