[package]
name = "grim-garage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Grim's Garage — local-first training dashboard & web app (Rust)."

[[bin]]
name = "grim-garage"
path = "src/main.rs"

[dependencies]
grim-format = { workspace = true }
grim-tensor = { workspace = true }
grim-backend-cpu = { workspace = true }
grim-tensor-graph = { workspace = true }
grim-backend-rocm = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

# Backend HTTP layer (axum)
axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["fs"] }
futures = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }

[features]
default = []
