[package]
name = "grim-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Paged KV cache, block allocator, prefix cache, and SSM state pool for Grim. Implements the KvCache trait from grim-core."

[dependencies]
grim-tensor = { workspace = true }
grim-core = { workspace = true }
grim-kvtransport = { workspace = true }
grim-kvquant = { workspace = true }
grim-backend-cpu = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
rocm-aiter = []