[package]
name = "grim-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Plugin system for Grim — dynamic library + WASM component loading, ABI, capability flags. §6 of Grim architecture."

[dependencies]
grim-tensor = { workspace = true }
grim-core = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
libloading = { version = "0.8", optional = true }

# WASM runtime for sandboxed plugin execution
wasmtime = { version = "28", features = ["async"], optional = true }

[features]
default = []
wasm-sandbox = ["wasmtime"]
dylib-loading = ["libloading"]