[package]
name = "grim-quant"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Block quantizers (Q8_0, Q4_K, Q5_K, Q6_K) for Grim. Dequant-to-f32 on load, per-block scale/min following llama.cpp design."

[dependencies]
grim-tensor = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
grim-backend-cpu = { workspace = true }
grim-backend-rocm = { workspace = true }

[features]
default = []