[package]
name = "grim-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP/gRPC serving layer for Grim — OpenAI-compatible endpoints plus native streaming. axum-based."

[dependencies]
grim-tensor = { workspace = true }
grim-core = { workspace = true }
grim-engine = { workspace = true }
thiserror = { workspace = true }
axum = "0.7"
serde_json = "1"
tokio = { version = "1", features = ["net"] }

[features]
default = []