[package]
name = "grim-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP/gRPC serving layer for Grim — OpenAI-compatible endpoints plus native streaming. axum-based."

[dependencies]
grim-tensor = { workspace = true }
grim-core = { workspace = true }
grim-scheduler = { workspace = true }
grim-engine = { workspace = true }
grim-backend-rocm = { workspace = true }
thiserror = { workspace = true }
axum = "0.7"
serde_json = "1"
tokio = { version = "1", features = ["net", "rt", "time", "macros"] }
futures = "0.3"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.12"
serde = { version = "1", features = ["derive"] }
grim-models-transformer = { workspace = true }

[features]
default = []