[package]
name = "grim-models-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Audio encoder-decoder (Whisper-style) for Grim — implements EncoderDecoderLm per §4.4."

[dependencies]
grim-tensor = { workspace = true }
grim-nn = { workspace = true }
grim-core = { workspace = true }
grim-backend-cpu = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
