[package]
name = "grim-models-diffusion"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Diffusion model (UNet + DDIM/Euler noise schedulers) for Grim — implements DiffusionModel per §4.4."

[dependencies]
grim-tensor = { workspace = true }
grim-nn = { workspace = true }
grim-core = { workspace = true }
grim-backend-cpu = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
