[package]
name = "grim-models-transformer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Llama/Mistral-style dense transformer model for Grim — first CausalLm implementation."

[dependencies]
grim-tensor = { workspace = true }
grim-nn = { workspace = true }
grim-core = { workspace = true }
grim-backend-cpu = { workspace = true }
thiserror = { workspace = true }
