[package]
name = "grim-models-vision"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Vision encoder for Grim — ViT/CLIP-style patch embedding + transformer encoder. Implements the Encoder trait."

[dependencies]
grim-tensor = { workspace = true }
grim-nn = { workspace = true }
grim-core = { workspace = true }
grim-backend-cpu = { workspace = true }
thiserror = { workspace = true }

[features]
default = []